--- a/dev/atl-output/app/assets/scss/_xml6.scss
+++ b/dev/atl-output/app/assets/scss/_xml6.scss
@@ -2732,9 +2732,12 @@ main.emblem-page.frontmatter {
 		section.section__epigram .original .verse-epigram span {
 			line-height: 1.5;
 		}
+		.panel--right section.section__discourse div.discourse {
+			grid-template-columns: repeat(12, 1fr);
+		}
 		.panel--right section.section__discourse .discourse-p1, 
 		.panel--right section.section__discourse .discourse-p2 {
-			grid-column: 1 / 3;
+			grid-column: 1 / 13;
 		}
 		.panel--full section.section__discourse {
 			.translation .edition--normalized div.discourse {
@@ -2748,6 +2751,35 @@ main.emblem-page.frontmatter {
 			}
 			.translation .edition--normalized .ab {
 				width: 72vw;
+			}
+		}
+	}
+	/* emblems with margin notes */
+	main.emblem-page[data-id='5'], 
+	main.emblem-page[data-id='7'], 
+	main.emblem-page[data-id='8'], 
+	main.emblem-page[data-id='9'], 
+	main.emblem-page[data-id='10'], 
+	main.emblem-page[data-id='13'], 
+	main.emblem-page[data-id='14'], 
+	main.emblem-page[data-id='15'], 
+	main.emblem-page[data-id='17'], 
+	main.emblem-page[data-id='23'], 
+	main.emblem-page[data-id='28'], 
+	main.emblem-page[data-id='30'], 
+	main.emblem-page[data-id='36'], 
+	main.emblem-page[data-id='43'], 
+	main.emblem-page[data-id='49'], 
+	main.emblem-page[data-id='53'], 
+	main.emblem-page.frontmatter[data-id='2'], 
+	main.emblem-page.frontmatter[data-id='3'], 
+	main.emblem-page.frontmatter[data-id='4'] {
+		section.section__discourse, 
+		section.section__preface {
+			.edition--facsimile .discourse-p1, 
+			.edition--facsimile .discourse-pagebreak, 
+			.edition--facsimile .discourse-p2 {
+				margin-right: 0;
 			}
 		}
 	}
